Eliminate more SecurityPolicy-based method calls. Update tests.